# ArquitecturaDelNodoIOT_practicas

./: .gitignore  README.md
ejemplos/deep_sleep/main/: deep_sleep_example_main.c
practica2/: practica2.code-workspace  readme.md
practica2/basic/: sdkconfig
practica2/ejerciciofinal/main/: Kconfig.projbuild  main.c
practica2/si7021/main/: CMakeLists.txt  main.c
practica2/timer/: sdkconfig.old
practica2/timer/main/: Kconfig.projbuild  main.c
practica3/: README.md  diagrama_fsm.drawio  practica3.code-workspace  readme.md
practica3/ej1_sampling/main/: CMakeLists.txt  Kconfig.projbuild  main.c
practica3/ej2_comunication/main/: Kconfig.projbuild  main.c
practica3/ej2_queue/main/: main.c
practica3/ej3_events/main/: CMakeLists.txt  event_source.h  hall_event.h  main.c
practica3/ej4_estructuracion/components/: CMakeLists.txt
practica3/ej4_estructuracion/events/: temperature_monitor_events.h
practica3/ej4_estructuracion/main/: Kconfig.projbuild  main.c
practica3/resources/: diagrama_fsm.drawio
practica4/: README.md  practica4.code-workspace  readme.md
practica5/: README.md  practica4.code-workspace
practica6/: README.md  practica6.code-workspace
practica6/ej1_basic/: README.md
practica7/: README.md  practica7.code-workspace
practica7/ej2_helloWorld_toUpdate/: CMakeLists.txt
practica7/ej2_serverSSL_content/: ca_cert.pem  ca_key.pem
practica7/ej3_estructuracion3/: CMakeLists.txt
practica7/ej3_estructuracion3/components/OTA_service/: CMakeLists.txt  Kconfig.projbuild  OTA_service.c  OTA_service.h
practica7/helloWorld_toUpdte/: Makefile
(+81 files in other folders)
